--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -22,7 +22,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
             android:layout_weight="0.5"
             android:textColor="@color/text_3"
             android:textSize="@dimen/small_text"
@@ -35,10 +34,9 @@
             android:id="@+id/published_at"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
             android:layout_marginStart="2dp"
             android:layout_weight="0.5"
-            android:gravity="right"
+            android:gravity="end"
             android:textColor="@color/text_3"
             android:textSize="@dimen/small_text"
             tools:text="January 5th"
