--- a/app/src/main/res/layout/item_position.xml
+++ b/app/src/main/res/layout/item_position.xml
@@ -9,7 +9,8 @@
     android:background="@drawable/card_bg"
     android:orientation="vertical"
     android:paddingBottom="8dp"
-    android:paddingLeft="4dp"
+    android:paddingStart="4dp"
+    android:paddingEnd="4dp"
     android:paddingTop="4dp"
     tools:layout_height="150dp"
     tools:layout_marginTop="100dp"
@@ -27,7 +28,7 @@
             android:id="@+id/ticker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
@@ -42,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center_vertical|right"
+            android:gravity="center_vertical|end"
             android:maxLines="1"
             android:textColor="@color/text_1"
             android:textSize="@dimen/large_text"
@@ -54,7 +55,7 @@
             android:id="@+id/more_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
+            android:layout_gravity="center_vertical|end"
             android:background="?selectableItemBackgroundBorderless"
             android:src="@drawable/ic_more"
             android:tint="@color/icon_tint"
@@ -67,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginEnd="4dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/text_1"
@@ -83,15 +84,12 @@
         android:gravity="bottom"
         android:layout_gravity="bottom"
         android:orientation="horizontal"
-        android:paddingEnd="4dp"
-        android:paddingRight="4dp"
-        >
+        android:paddingEnd="4dp">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:layout_weight="0.33"
             android:gravity="bottom"
             android:orientation="vertical"
@@ -124,7 +122,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:layout_weight="0.33"
             android:gravity="bottom"
             android:orientation="vertical"
