--- a/app/src/main/res/layout/widget_header.xml
+++ b/app/src/main/res/layout/widget_header.xml
@@ -4,10 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
-    android:layout_marginLeft="@dimen/widget_margin"
     android:layout_marginStart="@dimen/widget_margin"
     android:orientation="horizontal"
-    >
+    android:baselineAligned="false">
 
     <LinearLayout
         android:layout_width="0dp"
