--- a/app/src/main/res/layout/stock_field_view.xml
+++ b/app/src/main/res/layout/stock_field_view.xml
@@ -14,8 +14,8 @@
         android:id="@+id/fieldname"
         android:textColor="@color/text_2"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:gravity="left"
+        android:layout_alignParentStart="true"
+        android:gravity="start"
         />
 
     <TextView
@@ -28,6 +28,6 @@
         tools:text="GOOG"
         android:layout_centerVertical="true"
         android:ellipsize="none"
-        android:gravity="right"
+        android:gravity="end"
         />
 </merge>
